log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      securityContext:
        fsGroup: 1000
      # volumes:
      #   - name: shared-log-output
      #     persistentVolumeClaim:
      #       claimName: dwk-pv-claim
      containers:
        - name: log-outputter
          image: jhirvioja/log-outputter:0.0.9
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
              readOnly: true
          # volumeMounts:
          #   - name: shared-log-output
          #     mountPath: /usr/src/app/files
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
        # - name: log-generator
        #   image: jhirvioja/log-generator:0.0.5
        # volumeMounts:
        #   - name: shared-log-output
        #     mountPath: /usr/src/app/files
